--- a/src/app/angular/game-new/game-new.component.html
+++ b/src/app/angular/game-new/game-new.component.html
@@ -2,14 +2,14 @@
   <div class="card">
     <h2 class="title">Nuevo Juego</h2>
     <!--BEGIN: TUS CAMBIOS AQUI-->
-    <form>
+    <form [formGroup]="gameForm" (ngSubmit)="onSubmit()">
       <div class="field">
         <label for="name">Nombre</label>
-        <input id="name" type="text" />
+        <input id="name" type="text" formControlName="name"/>
       </div>
       <div class="field">
         <label for="name">Descripción</label>
-        <textarea id="name" type="text"></textarea>
+        <textarea id="name" type="text" formControlName="description"></textarea>
       </div>
       <div class="actions">
         <button type="submit" class="btn-primary">Crear</button>
