--- a/src/app/css/gallery/gallery.component.css
+++ b/src/app/css/gallery/gallery.component.css
@@ -8,3 +8,44 @@
   font-size: 24px;
   font-weight: bold;
 }
+
+.gallery-list {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.gallery-list li {
+  width: 100%; /* Ocupa todo el ancho por defecto */
+  margin-bottom: 20px;
+  box-sizing: border-box;
+}
+
+.gallery-list figure {
+  margin: 0;
+  text-align: center;
+}
+
+.gallery-list img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: 0 auto; /* Centra la imagen dentro del figure */
+}
+
+@media (min-width: 600px) {
+  .gallery-list li {
+    width: calc(50% - 10px);
+
+  }
+}
+
+@media (min-width: 900px) {
+  .gallery-list li {
+    width: calc(33.33% - 15px);
+
+  }
+}
