--- a/src/app/css/gallery/gallery.component.html
+++ b/src/app/css/gallery/gallery.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <h1 class="title">Galería</h1>
-  <ul>
+  <ul class="gallery-list">
     <li>
       <figure>
         <img src="/assets/gallery/img1.jpeg" />
