--- a/src/app/html/form/form.component.css
+++ b/src/app/html/form/form.component.css
@@ -23,3 +23,12 @@ input[type="number"] {
 button {
   @apply mt-8 w-full flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500;
 }
+.field-lenguages{
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+label.label-radio-buttons{
+  margin-left: 16px;
+  margin-top: 0px;
+}
