--- a/src/app/angular/game-detail/game-detail.component.html
+++ b/src/app/angular/game-detail/game-detail.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="field">
         <label for="description">Descripción</label>
-        <textarea id="ndescriptioname" type="text" formControlName="description"></textarea>
+        <textarea id="description" type="text" formControlName="description"></textarea>
       </div>
       <div class="actions">
         <button type="submit" class="btn-primary">Actualizar</button>
